<resources>
    <string name="app_name">App Components</string>
    <string name="action_home">Home</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_home">Home Fragment</string>
    <string name="fragment_contact_us">Contact Us Fragment</string>

    <string name="home_intent">Intent</string>
    <string name="home_activity">Activity</string>
    <string name="home_fragment">Fragment</string>
    <string name="home_service">Service</string>
    <string name="home_intent_service">Intent Service</string>
    <string name="home_notification">Notification</string>
    <string name="home_thread">Thread Concept</string>
    <string name="home_networking">Networking Concept Get Request</string>
    <string name="home_data_storage">Data Storage</string>

    <!-- -->
    <string name="title_activity_service_demo">Service</string>
    <string name="title_activity_for_result_demo">Activity</string>
    <string name="title_activity_demo">Activity</string>
    <string name="title_activity_main">App Components</string>
    <string name="title_activity_fragment_demo">Fragment</string>
    <string name="title_activity_intent_demo">Intent</string>
    <string name="title_activity_share_intent">Share Intent</string>
    <string name="title_activity_data_storage_demo">Data Storage</string>
    <string name="title_activity_thread_demo">Thread</string>
    <!---->

    <string name="intent_implicit_intents">Implicit intent</string>
    <string name="intent_explicit_intents">Explicit intent</string>
    <string name="intent_start_activity_for_result">Start Activity For Result</string>
    <string name="intent_share_intent">Share Intent</string>
    <string name="intent_submit_btn">Submit</string>
    <string name="intent_result_enter_value">Enter the value to pass to previous activity</string>


    <string name="service_start">Start Service</string>
    <string name="service_stop">Stop Service</string>
    <string name="service_start_bind">Start Bind Service</string>
    <string name="service_un_bind">UnBind Service</string>
    <string name="service_get_value">Get Value From Service</string>
    <string name="service_intent_service">Start IntentService</string>
    <string name="service_bind_service_message">Stop and start as bind service to get value from My Service</string>

    <string name="thread_run_on_ui">Activity.runOnUiThread (Runnable)</string>
    <string name="thread_view_post">View.post (Runnable)</string>
    <string name="thread_view_post_delay">View.postDelayed (Runnable, long)</string>
    <string name="thread_asyc_task">AsyncTask</string>
    <string name="data_store_in_sp">Store in Shared Preference</string>
    <string name="data_get_from_sp">Get from Shared Preference</string>


</resources>
