<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_implicit_intents"
        android:id="@+id/home_implicit_intent_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_implicit_intent_btn"
        android:text="@string/home_explicit_intents"
        android:id="@+id/home_explicit_intent_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_explicit_intent_btn"
        android:text="@string/home_activity"
        android:id="@+id/home_activity_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_activity_btn"
        android:text="@string/home_fragment"
        android:id="@+id/home_fragment_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_fragment_btn"
        android:text="@string/home_service"
        android:id="@+id/home_service_btn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_service_btn"
        android:text="@string/home_intent_service"
        android:id="@+id/home_intent_service_btn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_intent_service_btn"
        android:text="@string/home_notification"
        android:id="@+id/home_notification_btn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_notification_btn"
        android:text="@string/home_thread"
        android:id="@+id/home_thread_btn"
        />
</RelativeLayout>
