<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reeuse.component.thread.ThreadDemoActivity">


    <Button
        android:id="@+id/thread_run_on_ui_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_run_on_ui" />

    <Button
        android:id="@+id/thread_view_post_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_view_post" />


    <Button
        android:id="@+id/thread_view_post_delay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_view_post_delay" />

    <Button
        android:id="@+id/thread_asyc_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_asyc_task" />

    <ImageView
        android:id="@+id/thread_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

</LinearLayout>